Addressing some vertical overflow issues

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -70,47 +70,27 @@ html, body {
 
 	background-image: url("koi5.png");
 	/*background-size: cover;*/
-	overflow: hidden;
+	
 	text-overflow: ellipsis;
 
 	z-index: 0;
 
-	position: relative;
+	
+
+	height: 100vh;
+
+	overflow-y:scroll; 
+
+	position:relative;
+
+
 
   
 
 }
 
 
-div.gradientMask { 
 
-	/*
-	background: rgb(0,0,0);
-background: linear-gradient(360deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 1%, rgba(107, 202, 226, 1)
- 100%);
-
-	position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    z-index: -1;
-
-    opacity: 0.5;
-    */
-
-    background-color: #0000002D;
-    z-index: -1;
-
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-  
-}
 /*
 
 .gradientMask {
@@ -1128,7 +1108,7 @@ html {
 body {
   height: 100%;
   margin: 0vh;
-  overflow: hidden;
+  
   
 }
 
@@ -1137,7 +1117,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  z-index: 0;
    color: #FFFFFF;
 }
 
